assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Condensed&display=swap');

/* Just clearing these out to a default position for the whole site before any styling is applied */

*{
    margin:0;
    padding:0;
    border:0;
}

/* Give the body a font family and a color */
body {
    font-family: Roboto Condensed, sans-serif;
    color: #000;
}

/* Give the headings a font family etc*/
h1, h2{
    font-family: Roboto, sans-serif;
    color: #000;
    letter-spacing: 4px;
}

header{
    height: 100px;
    max-width: 100%;
    position: relative;
    z-index: 100;
}

header img{ 
    float: left;  
    margin-left: 30px;
}

header h1{
    float: left;
    margin-left: 20px;
    margin-top: 20px;
}

header a{
    text-decoration: none;
}

/* navigation links */

#navmenu{
    letter-spacing: 4px;
}

#navmenu li{
    float: right;
    font-size: 125%;
    font-weight: 600;
    list-style-type: none;
    margin-top: 30px;
    margin-right: 30px;
}

#navmenu a{
    text-decoration: none;
    color: inherit;
}

#navmenu a:hover{
    border-bottom: 1px solid #000;
}

.active{
    border-bottom: 1px solid #000;
}

/*Hero Image */

#opaqueit{
    width: 100%;
    height: 75px;
    position: relative;
    background:rgba(255,255,255, 0.35);
    z-index: 5;
    margin-top: -100px;
}

#hero-image-outer{
    height: 700px;
    overflow: visible;
}

#hero-image{
    height:600px;
    width: 95.2%;
    background: url("/assets/images/tree-forest-walking.png") no-repeat center center;
    z-index: 1;
    margin-top: -100px;
    /* Animates zoom effect on loading the page */
    animation-name: hero-zoom;
    animation-duration: 5s;
    animation-fill-mode: forwards;
}

/* Creates the level of zoom for hero image */
@keyframes hero-zoom {
    from{
        transform: scale(1);
    }
    to{
        transform: scale(1.1);
    }
}

#cover-text, #cover-text h2 {
    color: #ffffff;
}

#cover-text {
    clear: inherit;
    font-size: 130%;
    font-family: roboto;
    text-transform: uppercase;
    letter-spacing: 4px;
    width: 400px;
    height: 200px;
    padding-top: 40px;
    padding-left: 10px;

    background-color: rgba(70, 150, 71, .35);
    top: 350px;
    right: 100px;

    position: absolute;

}

#cover-text a{
    text-decoration: none;
    color: #fff;
}

/* Hiking Ethos */

#hiking-ethos{
    height: 300px;
    position: relative;
    clear: both;
}

#left-ethos{
    width: 33%;
    text-align: center;
    margin-left: 30px;
    float: left;
    position: relative;
    z-index: 50;
}

#left-ethos h3{
    font-style: italic;
    color: #fff;
    margin-top: -260px;
    background-color: rgba(70, 150, 71, .35);
    margin-left: 160px;
    margin-bottom: -.1rem;
    padding: 5px;
    max-width: 290px;
}

#center-ethos{
    width: 33%;
    margin-top: -80px;
    margin-left: -40px;
    text-align: left;
    float: left;
    position: relative;
}

#center-ethos h2 {
    padding-left: 70px;
    margin-top: 20px;
    margin-bottom: 10px;
}

#center-ethos p {
    padding-left: 70px;
}

#right-ethos{
    width: 33%;
    margin-top: -82px;
    text-align: left;
    margin-right: 20px;
    float: right;
    position: relative;
}

#right-ethos h2 {
    padding-left: 70px;
    margin-top: 20px;
    margin-bottom: 10px;
}

#right-ethos p {
    padding-left: 70px;
}



/* Trails */

#trails{
    height: 600px;
}

/* Gallery */

#gallery{
    height: 600px;
}

/* Login */

#login{
    height: 600px;
}


/* Footer */

footer{
    height: 100px;
}

#footer-line{

    border-top: 1px solid #000;
    margin-left: 30px;
    margin-right: 30px;
}

#elevator-left{
    width: 33%;
    float: left;
    margin-left: 30px;
    margin-top: 35px;
}

.ctabutton-right{
    width: 33%;
    float: right;
    margin-right: 30px;
    text-align: right;
    margin-top: -85px;
}

.social-icons-center{
    width: 33%;
    margin: 0 auto;
    text-align: center;
}

#elevator-left p{
    width: 90%;
    line-height: 20px;
}

.social-icons-center li{
    display: inline;
}

.social-icons-center i{
    font-size: 250%;
    margin: 1%;
    padding: 5%;
    color: #000;
}

.arrowPacman {
    --arrow-width: 20px;
    --arrow-spacer: 4px;
    --arrow-plus-spacer: calc(var(--arrow-width) + var(--arrow-spacer));
    overflow: hidden;
    position: absolute;
    right: -0.2em;
    top: 50%;
    transform: translate(-50%, -50%);
    width: var(--arrow-plus-spacer);
  }
  .arrowPacman svg {
    height: 16px;
    width: var(--arrow-width);
  }
  .arrowPacman svg:last-of-type {
    margin-left: var(--arrow-spacer);
  }
  
  .arrowPacman-clip {
    align-items: center;
    display: flex;
    overflow: hidden;
    transform: translateX(calc(var(--arrow-plus-spacer) * -1));
    width: calc(var(--arrow-plus-spacer) + var(--arrow-width));
  }
  
  @keyframes pacman {
    to {
      transform: translateX(0);
    }
  }
  button {
    --button-background: transparent;
    --button-color: black;
    background-color: var(--button-background);
    border-radius: 4px;
    border: 0;
    box-shadow: none;
    color: var(--button-color);
    cursor: pointer;
    display: inline-block;
    font-size: 1rem;
    font-weight: 500;
    height: 64px;
    line-height: 1;
    padding-left: 1rem;
    padding-right: 2rem;
    position: relative;
    text-align: left;
    text-decoration: none;
    transition: box-shadow 150ms cubic-bezier(0.61, 1, 0.88, 1);
    white-space: nowrap;
  }
  button:hover, button:focus {
    box-shadow: 0 3px 7px 1px rgba(50, 50, 50, 0.25);
  }
  button:hover .arrowPacman-clip, button:focus .arrowPacman-clip {
    animation-delay: 150ms;
    animation-duration: 0.8s;
    animation-name: pacman;
    animation-iteration-count: infinite;
    animation-timing-function: cubic-bezier(0.55, 0, 0.21, 1);
  }
  button.-bg-yellow {
    --button-background: #ffb31c;
  }
  
  button > span {
    display: block;
    line-height: 1;
    padding-right: 1.5rem;
  }
  button > span:first-of-type {
    color: white;
    line-height: 1.5;
  }

